<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.myradioapp.SportsActivity">

    <TextView
        android:id="@+id/sports_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/sportAct"
        android:textColor="#000000"
        android:textSize="16sp" />

    <View
        android:id="@+id/sports_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/sports_description"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/talk_sport_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sports_line"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/talk_sport_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:src="@drawable/talksport" />

        <TextView
            android:id="@+id/talk_sport_textview"
            style="@style/CategoryStyle"
            android:layout_toRightOf="@id/talk_sport_image"
            android:text="@string/talkSport" />

        <ImageView
            android:id="@+id/talk_sport_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:src="@drawable/play" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/talk_sport_relative"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/espn_radio_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/talk_sport_relative"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/espn_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:src="@drawable/espn_image" />

        <TextView
            android:id="@+id/espn_textview"
            style="@style/CategoryStyle"
            android:layout_toRightOf="@id/espn_image"
            android:text="@string/espn" />

        <ImageView
            android:id="@+id/espn_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:src="@drawable/play" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/espn_radio_relative"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/wfan_radio_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/espn_radio_relative"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/wfan_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:src="@drawable/wfan_image" />

        <TextView
            android:id="@+id/wfan_textview"
            style="@style/CategoryStyle"
            android:layout_toRightOf="@id/wfan_image"
            android:text="@string/wfan" />

        <ImageView
            android:id="@+id/wfan_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:src="@drawable/play" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/wfan_radio_relative"
        android:background="@android:color/darker_gray" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:max="100" />

</RelativeLayout>
