<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.myradioapp.MusicActivity">

    <TextView
        android:id="@+id/music_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/musicAct"
        android:textColor="#000000"
        android:textSize="16sp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/music_description"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/fm181_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fm181_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:src="@drawable/fm181_image" />

        <TextView
            android:id="@+id/talk_sport_textview"
            style="@style/CategoryStyle"
            android:layout_toRightOf="@id/fm181_image"
            android:text="@string/fm181" />

        <ImageView
            android:id="@+id/fm181_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:src="@drawable/play" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/fm181_relative"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/bluegrass_radio_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fm181_relative"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bluegrass_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:src="@drawable/bluegrass_image" />

        <TextView
            android:id="@+id/espn_textview"
            style="@style/CategoryStyle"
            android:layout_toRightOf="@id/bluegrass_image"
            android:text="@string/bluegrass" />

        <ImageView
            android:id="@+id/bluegrass_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:src="@drawable/play" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/bluegrass_radio_relative"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/radio_love_live_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluegrass_radio_relative"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/radio_love_live_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:src="@drawable/radio_love_live_image" />

        <TextView
            android:id="@+id/radio_love_live_textview"
            style="@style/CategoryStyle"
            android:layout_toRightOf="@id/radio_love_live_image"
            android:text="@string/radiolovelive" />

        <ImageView
            android:id="@+id/radio_love_live_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:src="@drawable/play" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/radio_love_live_relative"
        android:background="@android:color/darker_gray" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:max="100" />

</RelativeLayout>
